# libat24

./: Makefile.am  configure.ac  libat24++.pc.in
example/: At24MonitorExample.cc  Makefile.am
include/: Makefile.am
include/libat24/: At24.h  libat24.h
src/: At24.cpp  Makefile.am  libat24.c
test/: At24Test.cc  Makefile.am
